--- a/DICE/CSS/style.css
+++ b/DICE/CSS/style.css
@@ -15,17 +15,18 @@ body{
 
 h1{
     margin: 20px;
-    font-size: 6rem;
+    font-size: 4.5rem;
     color: darkseagreen;
 }
 .dice-area{
-    margin: 0 50px;
+    margin: 30px 50px;
     text-align: center;
     display: inline-block;
 }
 .player{
     font-size: 2.5rem;
     color: antiquewhite;
+    margin-bottom: 15px;
 }
 img{
     width: 320px;
